# duplikate

./: Cargo.toml  Containerfile  LICENSE  README.md  flake.nix
.forgejo/workflows/: docker.yaml
src/: main.rs
