[package]
name = "duplikate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
once_cell = "1.19.0"
redis = { version = "0.25.3", features = ["tokio-rustls-comp"] }
regex = "1.10.5"
serenity = { version = "0.12", features = ["collector"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
